<resources>
    <string name="app_name">Supervisor</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <!--<string name="url">http://10.0.2.2/EagleXpetize/</string>-->
    <string name="url">http://vikray.in/</string>

    <string name="Language">Language</string>
    <string name="lbl_recording">Recording...</string>
    <string name="pDialog_wait">Please Wait..</string>

    <string name="About">About</string>
    <string name="LogOut">LogOut</string>
    <string name="Inspector">Inspector</string>
    <string name="username">Username</string>
    <string name="password">Passsword</string>
    <string name="Login">Login</string>
    <string name="Name">Name</string>
    <string name="Description">Description</string>
    <string name="Comments">Comments</string>
    <string name="AssignedTo">AssignedTo</string>
    <string name="Approve">Approve</string>
    <string name="Reject">Reject</string>
    <string name="Operators">Operators</string>
    <string name="MyTasks">My Tasks</string>
    <string name="ApproveReject">Approve/Reject</string>
    <string name="Loading">Loading...</string>
    <string name="SubName">SubName</string>
    <string name="Status">Status</string>
    <string name="AssignedBy">Assigned By :</string>
    <string name="Record">Record</string>
    <string name="Play">Play</string>
    <string name="Send">Send</string>
    <string name="Priority">Priority</string>
    <string name="Submit">Submit</string>
    <string name="Operator">Operator</string>
    <string name="SubTaskName">SubTask Name</string>
    <string name="SelectTask">Select Task</string>
    <string name="StartDate">Start Date</string>
    <string name="EndDate">End Date</string>
    <string name="Order">Order</string>
    <string name="Add">Add</string>
    <string name="TypeComments">Type Your Comments Here..</string>
    <string name="HighPriority">High Priority</string>
    <string name="MediumPriority">Medium Priority</string>
    <string name="LowPriority">Low Prority</string>
    <string name="ReAssign">Re-Assign To</string>
    <string name="TaskName">TaskName</string>
    <string name="Attachments">Attachments</string>
    <string name="checkItemHint">Enter Check List Item here..</string>


    <string name="TypeComment">Type your comment here..</string>

    <string name="Success">Success</string>
    <string name="Failed">Failed</string>

</resources>
