<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <EditText
                android:id="@+id/editText_subName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/SubTaskName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/editText_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:layout_below="@+id/editText_subName"
                android:background="@drawable/edit_text_style"
                android:hint="@string/Description"
                android:padding="10dp" />

            <Spinner
                android:id="@+id/spinner_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editText_desc"
                android:layout_margin="3dp"
                android:padding="5dp" />

            <EditText
                android:id="@+id/editText_Tasks"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/spinner_type"
                android:layout_margin="3dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/SelectTask"
                android:padding="5dp" />

            <EditText
                android:id="@+id/editText_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editText_order"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_toLeftOf="@+id/imageButton_startDate"
                android:layout_toStartOf="@+id/imageButton_startDate"
                android:background="@drawable/edit_text_style"
                android:ems="10"
                android:hint="@string/StartDate"
                android:padding="5dp" />

            <EditText
                android:id="@+id/editText_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText_start"
                android:layout_alignStart="@+id/editText_start"
                android:layout_below="@+id/editText_start"
                android:layout_toLeftOf="@+id/imageButton_endDate"
                android:layout_toStartOf="@+id/imageButton_endDate"
                android:background="@drawable/edit_text_style"
                android:ems="10"
                android:hint="@string/EndDate"
                android:padding="5dp" />

            <EditText
                android:id="@+id/editText_order"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editText_Tasks"
                android:layout_margin="3dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/Order"
                android:padding="5dp" />

            <EditText
                android:id="@+id/editText_comments"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editText_end"
                android:layout_margin="3dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/Comments"
                android:padding="5dp" />

            <Button
                android:id="@+id/button_add"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_comments"
                android:layout_centerHorizontal="true"
                android:text="@string/Add" />

            <ImageButton
                android:id="@+id/imageButton_startDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/spinner_type"
                android:layout_alignRight="@+id/spinner_type"
                android:layout_below="@+id/editText_order"
                android:background="@null"
                android:src="@drawable/calendar_ic" />

            <ImageButton
                android:id="@+id/imageButton_endDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/editText_end"
                android:layout_toEndOf="@+id/editText_start"
                android:layout_toRightOf="@+id/editText_start"
                android:background="@null"
                android:src="@drawable/calendar_ic" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>